cmake_minimum_required(VERSION 3.4)

project(mcx)
find_package(CUDA QUIET REQUIRED)
set (CUDA_VERBOSE_BUILD ON)
#CUDA_SELECT_NVCC_ARCH_FLAGS(cuda_arch AUTO)
set(Matlab_MX_LIBRARY "C:/Program Files/MATLAB/R2016b/extern/lib/win64/microsoft/libmx.lib")
find_package(Matlab)
set(Matlab_ROOT_DIR "C:/Program Files/MATLAB/R2016b")

add_definitions(-DUSE_ATOMIC)
add_definitions(-DUSE_XORSHIFT128P_RAND -DSAVE_DETECTORS -DUSE_CACHEBOX)
set(CUDA_NVCC_FLAGS "-arch=compute_35 -code=sm_35 -code=sm_50 -code=sm_52 -code=sm_61  -use_fast_math")
CUDA_INCLUDE_DIRECTORIES(cjson)
CUDA_ADD_LIBRARY(cJSON ./cjson/cJSON.c)
CUDA_INCLUDE_DIRECTORIES(.)
CUDA_INCLUDE_DIRECTORIES(.)
CUDA_ADD_LIBRARY(mcx_shapes mcx_shapes.c)
CUDA_ADD_LIBRARY(mcx_utils mcx_utils.c)
CUDA_ADD_LIBRARY(tictoc tictoc.c)
CUDA_ADD_LIBRARY(mcx_core mcx_core.cu)
add_executable(mcx mcextreme.c)
target_link_libraries(mcx mcx_core mcx_utils tictoc mcx_shapes cJSON)
message(status "Matlab libs: " ${Matlab_LIBRARIES})
#include_directories(${Matlab_INCLUDE_DIRS})
matlab_add_mex(NAME mcxlab SRC mcxlab.cpp)
link_directories("C:/Program Files/MATLAB/R2016b/extern/lib/win64/microsoft/")
target_link_libraries(mcxlab mcx_core mcx_utils tictoc mcx_shapes cJSON)